# sextante

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Constants.py  LICENSE  README.md  SECURITY.md  mpu9250.py  pyproject.toml  range.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  hardware.md
examples/: read_avg.py
mpu9250/: __init__.py  bmp280.py  cli.py  constants.py  data.py  demo.py  detect.py  driver.py  fusion.py  gps.py  lsm9ds1.py  ranges.py  recorder.py  report.py  streamer.py  ticker.py
mpu9250/web/: viewer.html
site/: astro.config.mjs  package-lock.json  package.json
site/src/pages/: index.astro
site/src/scripts/: hud.js  scene.js
tests/: conftest.py  test_bmp280.py  test_data.py  test_driver.py  test_fusion.py  test_gps.py  test_lsm9ds1.py  test_ranges.py  test_recorder.py  test_report.py  test_streamer.py  test_ticker.py
