[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mpu9250"
version = "0.2.0"
description = "Driver for the InvenSense MPU-9250 9-axis IMU (accel + gyro + AK8963 magnetometer) over I2C"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Oscar Lago" }]
dependencies = [
    "numpy",
    "smbus2",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/olagopirez/mpu9250"

[tool.setuptools.packages.find]
include = ["mpu9250*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
