[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sextante"
version = "0.2.0"
description = "Driver for the InvenSense MPU-9250 9-axis IMU (accel + gyro + AK8963 magnetometer) over I2C"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Oscar Lago" }]
keywords = ["mpu9250", "ak8963", "imu", "i2c", "raspberry-pi", "accelerometer", "gyroscope", "magnetometer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy",
    "smbus2",
]

[project.optional-dependencies]
dev = ["pytest"]
plots = ["matplotlib"]

[project.scripts]
sextante-record = "mpu9250.cli:record_main"
sextante-stream = "mpu9250.cli:stream_main"
sextante-report = "mpu9250.cli:report_main"

[project.urls]
Repository = "https://github.com/olagopirez/sextante"
Changelog = "https://github.com/olagopirez/sextante/blob/master/CHANGELOG.md"
Issues = "https://github.com/olagopirez/sextante/issues"

[tool.setuptools.packages.find]
include = ["mpu9250*"]

[tool.setuptools.package-data]
"mpu9250.web" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
